--- a/app/layouts/application.html.erb
+++ b/app/layouts/application.html.erb
@@ -11,11 +11,12 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 
-  <link rel="favicon" href="logo.png" type="image/x-icon" />
+
 
 </head>
 
 <body>
+ <img src="public/Img/Logo.png" alt="Logo" style="width:304px;height:228px">
 <h1> haveabreak <h1>
 <%= yield %>
 
