--- a/app/layouts/application.html.erb
+++ b/app/layouts/application.html.erb
@@ -16,8 +16,11 @@
 </head>
 
 <body>
+
  <img src="public/Img/Logo.png" alt="Logo" style="width:304px;height:228px">
-<h1> haveabreak <h1>
+
+<h1> Ärzte Ranking <h1>
+
 <%= yield %>
 
 </body>
