--- a/app/layouts/application.html.erb
+++ b/app/layouts/application.html.erb
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>TestProject</title>
-
-
+  <title>Ärtze Ranking</title>
 
 
 <!-- Latest compiled and minified CSS -->
@@ -18,9 +16,8 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+
   <%= csrf_meta_tags %>
-
-
 
 </head>
 
@@ -56,4 +53,5 @@
 <%= yield %>
 
 </body>
+
 </html>
