--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Ärtze Ranking</title>
+  <title>Von Hamburgern für die Welt</title>
 
 
 <!-- Latest compiled and minified CSS -->
@@ -23,32 +23,30 @@
 
 <body>
 
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Project name</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right" role="form">
-            <div class="form-group">
-              <input type="text" placeholder="Email" class="form-control">
-            </div>
-            <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-success">Sign in</button>
-          </form>
-        </div><!--/.navbar-collapse -->
-      </div>
+    <div class="twelve columns">
+    <div class="logo">
+    <h1> Von Hamburgern </h1>
+    <p> für die Welt </p>
     </div>
-
-<h1> Ärzte Ranking <h1>
+    <div class="sticky wrapper">
+    <div id="primary-nav" class="main-menu hide-for-small" role="navigation">
+    <ul id="primary-menu" class="main-menu hide-for-small">
+    	<li class="Stores">
+   			 <a href="http://powerful-harbor-7972.herokuapp.com/pages/stores">Stores</a>
+   		 </li>
+  		  <li class="Tasche">
+  			  <a href="http://powerful-harbor-7972.herokuapp.com/pages/tasche">Tasche</a>
+  		  </li>
+  		  <li class="Contact Us">
+  			  <a href="http://powerful-harbor-7972.herokuapp.com/pages/contact">Contact Us</a>
+   		 </li>
+   		 <li class="About">
+   			 <a href="http://powerful-harbor-7972.herokuapp.com/pages/about">About</a>
+   		 </li>
+   		 </ul>
+   	 </div>
+     </div>
+   </div>
 
 <%= yield %>
 
