--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,8 +29,8 @@
     <p> für die Welt </p>
     </div>
     <div class="sticky wrapper">
-    <div id="primary-nav" class="main-menu hide-for-small" role="navigation">
-    <ul id="primary-menu" class="main-menu hide-for-small">
+    <div id="primary menu" class="horizontal-menu" role="navigation">
+    <ul id="primary menu" class="horizontal-menu">
     	<li class="Stores">
    			 <a href="http://powerful-harbor-7972.herokuapp.com/pages/stores">Stores</a>
    		 </li>
@@ -49,6 +49,14 @@
    </div>
 
 <%= yield %>
+
+
+
+    <div class="Inc">
+      <footer>
+        <p class="text-right"><small>&copy; Fronz Fruchtzwerg Inc. 2014</small></p>
+      </footer>
+    </div> 
 
 </body>
 
