--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,7 +54,7 @@
 
     <div class="Inc">
       <footer>
-        <p class="text-right"><small>&copy; Fronz Fruchtzwerg Inc. 2014</small></p>
+        <p class="text-center"><small>&copy; Fronz Fruchtzwerg Inc. 2014</small></p>
       </footer>
     </div> 
 
