--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,23 +34,24 @@
     </div>
     <div class="sticky wrapper">
     <div id="primary menu" class="horizontal-menu" role="navigation">
-    <ul id="primary menu" class="horizontal-menu">
-    	<li class="Stores">
+    <div class="row">
+    <div class=s"span1">
    			 <a href="http://powerful-harbor-7972.herokuapp.com/pages/stores">Stores</a>
-   		 </li>
-  		  <li class="Tasche">
+   		 </div>
+  		  <div class="span2">
   			  <a href="http://powerful-harbor-7972.herokuapp.com/pages/tasche">Tasche</a>
-  		  </li>
-  		  <li class="Contact Us">
+  		  </div>
+  		  <div class="span3">
   			  <a href="http://powerful-harbor-7972.herokuapp.com/pages/contact">Contact Us</a>
-   		 </li>
-   		 <li class="About">
+   		 </div>
+   		 <div class="span4">
    			 <a href="http://powerful-harbor-7972.herokuapp.com/pages/about">About</a>
-   		 </li>
-   		 </ul>
-   	 </div>
-     </div>
+   		 </div>
    </div>
+   </div>
+   </div>
+   </div>
+  
 
 <%= yield %>
 
