menu bar plus fonts

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,7 +1,8 @@
 /*application for all pages*/
 
+
 .twelve.columns {
-	font-family: 'Karla', sans-serif;
+	font-family: 'Titillium Web', sans-serif;
 	font-color: #FFF;
 }
 
