--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
 
 
 <!-- fonts -->
-<link href='http://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,400italic,300,300italic,700,700italic' rel='stylesheet' type='text/css'>
 
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
@@ -36,10 +36,10 @@
     <div id="primary menu" class="horizontal-menu" role="navigation">
     <div class="row">
     <div class=s"span1">
-   			 <a href="http://powerful-harbor-7972.herokuapp.com/pages/stores">Stores</a>
+   			
    		 </div>
   		  <div class="span2">
-  			  <a href="http://powerful-harbor-7972.herokuapp.com/pages/tasche">Tasche</a>
+  			  
   		  </div>
   		  <div class="span3">
   			  <a href="http://powerful-harbor-7972.herokuapp.com/pages/contact">Contact Us</a>
@@ -51,7 +51,30 @@
    </div>
    </div>
    </div>
-  
+
+   <div class="row">
+  <div class="col-md-1">.col-md-1</div>
+  <div class="col-md-1">.col-md-1</div>
+  <div class="col-md-1">.col-md-1</div>
+  <div class="col-md-1">.col-md-1</div>
+  <div class="col-md-1">.col-md-1>
+     <a href="http://powerful-harbor-7972.herokuapp.com/pages/stores">Stores</a>
+     </div>
+  <div class="col-md-1">.col-md-1>
+     <a href="http://powerful-harbor-7972.herokuapp.com/pages/tasche">Tasche</a>
+     </div>
+  <div class="col-md-1">.col-md-1>
+      <a href="http://powerful-harbor-7972.herokuapp.com/pages/contact">Contact Us</a>
+    </div>
+  <div class="col-md-1">.col-md-1>
+      <a href="http://powerful-harbor-7972.herokuapp.com/pages/about">About</a>  
+    </div>
+  <div class="col-md-1">.col-md-1</div>
+  <div class="col-md-1">.col-md-1</div>
+  <div class="col-md-1">.col-md-1</div>
+  <div class="col-md-1">.col-md-1</div>
+</div>
+
 
 <%= yield %>
 
