--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,29 +34,11 @@
     </div>
     <div class="sticky wrapper">
     <div id="primary menu" class="horizontal-menu" role="navigation">
-    <div class="row">
-    <div class=s"span1">
-   			
-   		 </div>
-  		  <div class="span2">
-  			  
-  		  </div>
-  		  <div class="span3">
-  			  <a href="http://powerful-harbor-7972.herokuapp.com/pages/contact">Contact Us</a>
-   		 </div>
-   		 <div class="span4">
-   			 <a href="http://powerful-harbor-7972.herokuapp.com/pages/about">About</a>
-   		 </div>
-   </div>
-   </div>
-   </div>
-   </div>
-
    <div class="row">
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
+  <div class="col-md-1"></div>
+  <div class="col-md-1"></div>
+  <div class="col-md-1"></div>
+  <div class="col-md-1"></div>
   <div class="col-md-1">.col-md-1>
      <a href="http://powerful-harbor-7972.herokuapp.com/pages/stores">Stores</a>
      </div>
@@ -69,12 +51,14 @@
   <div class="col-md-1">.col-md-1>
       <a href="http://powerful-harbor-7972.herokuapp.com/pages/about">About</a>  
     </div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
+  <div class="col-md-1"></div>
+  <div class="col-md-1"></div>
+  <div class="col-md-1"></div>
+  <div class="col-md-1"></div>
 </div>
-
+</div>
+</div>
+</div>
 
 <%= yield %>
 
