menu bar plus fonts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,17 +39,17 @@
   <div class="col-md-1"></div>
   <div class="col-md-1"></div>
   <div class="col-md-1"></div>
-  <div class="col-md-1">.col-md-1>
-     <a href="http://powerful-harbor-7972.herokuapp.com/pages/stores">Stores</a>
+  <div class="col-md-1"> Stores 
+     <a href="http://powerful-harbor-7972.herokuapp.com/pages/stores"</a>
      </div>
-  <div class="col-md-1">.col-md-1>
-     <a href="http://powerful-harbor-7972.herokuapp.com/pages/tasche">Tasche</a>
+  <div class="col-md-1"> Tasche 
+     <a href="http://powerful-harbor-7972.herokuapp.com/pages/tasche"</a>
      </div>
-  <div class="col-md-1">.col-md-1>
-      <a href="http://powerful-harbor-7972.herokuapp.com/pages/contact">Contact Us</a>
+  <div class="col-md-1"> Contact Us
+      <a href="http://powerful-harbor-7972.herokuapp.com/pages/contact"</a>
     </div>
-  <div class="col-md-1">.col-md-1>
-      <a href="http://powerful-harbor-7972.herokuapp.com/pages/about">About</a>  
+  <div class="col-md-1"> About 
+      <a href="http://powerful-harbor-7972.herokuapp.com/pages/about"</a>  
     </div>
   <div class="col-md-1"></div>
   <div class="col-md-1"></div>
