--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,9 +1,10 @@
 /*application for all pages*/
 
 
-.all {
+.a {
 	font-family: 'Titillium Web', sans-serif;
-	font-color: #000000;
+	color: #000000;
+	text
 }
 
 .sticky.wrapper {
