--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,10 +1,18 @@
-/*application for all pages*/
+#header {
+	font-family: 'Titillium Web', sans-serif;
+	font-size: 20px;
+}
 
 
-.a {
+#main-menu ul {
+	list-style: none;
+	list-style-type: none;
 	font-family: 'Titillium Web', sans-serif;
 	color: #000000;
-	text
+}
+
+#main-menu ul li:hover a{
+	color: #fff;
 }
 
 .sticky.wrapper {
@@ -20,11 +28,11 @@
 }
 
 
-
 .Inc {
 	text-align: center;
 	position: absolute;
 	bottom: 0;
+	color: #000000;
 }
 
 .
