--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,400italic,300,300italic,700,700italic' rel='stylesheet' type='text/css'>
 
  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
- 
+
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 
@@ -27,43 +27,29 @@
 
 <body>
 
-    <div class="twelve columns">
-    <div class="logo">
+    <div id="header" class="logo">
     <h1> Von Hamburgern </h1>
     <p> für die Welt </p>
     </div>
-    <div class="sticky wrapper">
-    <div id="primary menu" class="horizontal-menu" role="navigation">
-   <div class="row">
-  <div class="col-md-1"></div>
-  <div class="col-md-1"> Stores 
-     <a href="http://powerful-harbor-7972.herokuapp.com/pages/stores"</a>
-     </div>
-  <div class="col-md-1"> Tasche 
-     <a href="http://powerful-harbor-7972.herokuapp.com/pages/tasche"</a>
-     </div>
-  <div class="col-md-1"> Contact Us
-      <a href="http://powerful-harbor-7972.herokuapp.com/pages/contact"</a>
-    </div>
-  <div class="col-md-1"> About 
-      <a href="http://powerful-harbor-7972.herokuapp.com/pages/about"</a>
-    </div>
-</div>
-</div>
-</div>
+    <div id="main-menu" class="sticky wrapper">
+    <ul class="nav nav-pills">
+<li class="stores"><a href="#stores">Stores</a></li>
+<li> <a href="#about">About</a></li>
+<li><a href="#tasche">Tasche</a></li>
+<li><a href="#contact">Contact US</a></li>
+</ul>
 </div>
 
 <%= yield %>
 
 
+</body>
 
     <div class="Inc">
       <footer>
         <p class="text-center"><small>&copy; Fronz Fruchtzwerg Inc. 2014</small></p>
       </footer>
     </div> 
-
-</body>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
        <!-- <script type="text/javascript" charset="utf-8" src="js/jquery.tubular.1.0.js"></script> -->
