--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,3 +1,8 @@
+h1, h2, h3 {
+		font-family: 'Titillium Web', sans-serif;
+}
+
+
 #header {
 	font-family: 'Titillium Web', sans-serif;
 	font-size: 20px;
@@ -8,7 +13,10 @@
 	list-style: none;
 	list-style-type: none;
 	font-family: 'Titillium Web', sans-serif;
-	color: #000000;
+	color: #ffffff;
+	position: absolute;
+	text-align: center;
+
 }
 
 #main-menu ul li:hover a{
