--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Von Hamburgern für die Welt</title>
-
 
 <!-- fonts -->
 <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,400italic,300,300italic,700,700italic' rel='stylesheet' type='text/css'>
+
+  <title>von hamburgern für die welt</title>
 
  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
 
@@ -28,8 +28,8 @@
 <body>
 
     <div id="header" class="logo">
-    <h1> Von Hamburgern </h1>
-    <p> für die Welt </p>
+    <h1> von hamburgern </h1>
+    <p> für die welt </p>
     </div>
     <div id="main-menu" class="sticky wrapper">
     <ul class="nav nav-pills">
