--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,3 +1,7 @@
+
+
+@import url(http://fonts.googleapis.com/css?family=PT+Sans);
+
 h1, h2, h3 {
 		font-family: 'Titillium Web', sans-serif;
 }
@@ -14,9 +18,6 @@ h1, h2, h3 {
 	list-style-type: none;
 	font-family: 'Titillium Web', sans-serif;
 	color: #ffffff;
-	position: absolute;
-	text-align: center;
-
 }
 
 #main-menu ul li:hover a{
