--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
 
 <!-- fonts -->
-<link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,400italic,300,300italic,700,700italic' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
 
   <title>von hamburgern für die welt</title>
 
@@ -31,7 +31,7 @@
     <h1> von hamburgern </h1>
     <p> für die welt </p>
     </div>
-    <div id="main-menu" class="sticky wrapper">
+    <div id="main-menu" class="main manu">
     <ul class="nav nav-pills">
 <li class="stores"><a href="#stores">Stores</a></li>
 <li> <a href="#about">About</a></li>
