--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
 <body>
 
     <div id="header" class="logo">
-    <h1> von hamburgern </h1>
+    <p> von hamburgern </p>
     <p> für die welt </p>
     </div>
     <div id="main-menu" class="main manu">
