--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -1,3 +1,5 @@
+<html>
+
 <body data-spy="scroll" data-target=".wrapper">
 
 
@@ -9,5 +11,12 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+
+<script src="jquery.mosaicflow.min.js"></script>
 
   </body>
+
+
+
+</html>
