--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -3,20 +3,20 @@
 <body data-spy="scroll" data-target=".wrapper">
 
 
-
-
-<!-- Small modal -->
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-
-<script src="jquery.mosaicflow.min.js"></script>
+<div class="clearfix mosaicflow">
+    <div class="mosaicflow__item">
+        <img width="500" height="300" src="public/Img/egg.jpg" alt="EGG">
+    </div>
+    <div class="mosaicflow__item">
+        <img width="500" height="500" src="public/Img/red.jpg" alt="W?">
+    </div>
+</div>
 
   </body>
 
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+
+<script src="jquery.mosaicflow.min.js"></script>
 
 
 </html>
