--- a/app/assets/stylesheets/stores.css.scss
+++ b/app/assets/stylesheets/stores.css.scss
@@ -1,6 +1,11 @@
-// Place all the styles related to the pages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-
+.mosaicflow__column {
+    float:left;
+    }
+    
+.mosaicflow__item img {
+    display:block;
+    width:100%;
+    height:auto;
+}
