--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,14 +3,11 @@
 <table>
   <thead>
     <tr>
-      <th>Kreiert von</th>
       <th>Name</th>
-      <th>Beschreibung</th>
+      <th>Description</th>
       <th>Image url</th>
-      <th>Preis</th>
-      <th>Aktion</th>
-      <th>Groesse</th>
-      <th>Lieferzeit und Verstandkosten</th>
+
+
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,14 +15,9 @@
   <tbody>
     <% @products.each do |product| %>
       <tr>
-        <td><%= product.hersteller %></td>
         <td><%= product.name %></td>
-        <td><%= product.beschreibung %></td>
+        <td><%= product.description %></td>
         <td><%= product.image_url %></td>
-        <td><%= product.preis %></td>
-        <td><%= product.aktion %></td>
-        <td><%= product.groesse %></td>
-        <td><%= product.lieferzeit_versandkosten %></td>    
 
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
