--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,45 +1,19 @@
 <p id="notice"><%= notice %></p>
 
 
-
-<p>
-  <strong>Kreiert von:</strong>
-  <%= @product.hersteller %>
-</p>
-
 <p>
   <strong>Name:</strong>
   <%= @product.name %>
 </p>
 
 <p>
-  <strong>Beschreibung:</strong>
-  <%= @product.beschreibung %>
+  <strong>Description:</strong>
+  <%= @product.description %>
 </p>
 
 <p>
   <strong>Image url:</strong>
   <%= @product.image_url %>
-</p>
-
-<p>
-  <strong>Preis:</strong>
-  <%= @product.preis %>
-</p>
-
-<p>
-  <strong>Aktion:</strong>
-  <%= @product.aktion %>
-</p>
-
-<p>
-  <strong>Groesse:</strong>
-  <%= @product.groesse %>
-</p>
-
-<p>
-  <strong>Lieferzeit und Versandkosten:</strong>
-  <%= @product.lieferzeit_versandkosten %>
 </p>
 
 
