--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -5,7 +5,7 @@
 
 <div class="clearfix mosaicflow">
     <div class="mosaicflow__item">
-        <img width="500" height="300" src="public/Img/egg.jpg" alt="EGG">
+        <img width="500" height="300" url='public/Img/egg.jpg' alt="EGG">
     </div>
     <div class="mosaicflow__item">
         <img width="500" height="500" src="public/Img/red.jpg" alt="W?">
