--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -1,18 +1,21 @@
 <html>
 
-<body data-spy="scroll" data-target=".container">
+<body>
 
-
-<div id="container" class="js-masonry"
-  data-masonry-options='{ "columnWidth": 200, "itemSelector": ".item" }'>
-  <div class="item">egg</div>
-  <div class="item w2">hot</div>
+<div class="masonry js-masonry"  data-masonry-options='{ "columnWidth": ".grid-sizer", "itemSelector": ".item" }'>
   <div class="item">...</div>
+  <div class="item w2">khevziu</div>
+  <div class="item">kheviz</div>
+</div>
+
+<div id="column-width-demo2">
+  <div class="grid-sizer"></div>
+  <div class="item"></div>
+  <div class="item"></div>
 </div>
 
   </body>
 
-<script src="/path/to/masonry.pkgd.min.js"></script>
-
+ 
 </html>
 
