--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,6 @@
 
   <title>von hamburgern für die welt</title>
 
- <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 
@@ -15,9 +13,14 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 
-  
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+<script src="/javascripts/masonry.pkgd.min.js"></script>
 
+
+ <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+
+ <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  
+ 
   <%= csrf_meta_tags %>
 
 </head>
@@ -49,7 +52,7 @@
     </div> 
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
-       <!-- <script type="text/javascript" charset="utf-8" src="js/jquery.tubular.1.0.js"></script> -->
-<script src="js/scripts.js" type="text/javascript"></script>
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.js" type="text/javascript"></script>
 
 </html>
