--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,10 @@
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
 
 <!-- Latest compiled and minified JavaScript -->
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+<script rel="stylesheet" src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 
-<script src="/javascripts/masonry.pkgd.min.js"></script>
+<script type="text/javascript" src="/javascripts/masonry.pkgd.min.js"></script>
+
 
 
  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -56,3 +57,5 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.js" type="text/javascript"></script>
 
 </html>
+
+
