menu bar change

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,14 +32,18 @@
     <p> von hamburgern </p>
     <p> für die welt </p>
     </div>
-    <div id="main-menu" class="main manu">
-    <ul class="nav nav-pills">
-<li class="stores"><a href="#stores">Stores</a></li>
-<li> <a href="#about">About</a></li>
-<li><a href="#tasche">Tasche</a></li>
-<li><a href="#contact">Contact US</a></li>
-</ul>
-</div>
+<div class="row">
+        <div class="span12">
+            <ul>
+ 
+                <li>Stores</li>
+                <li>About</li>
+                <li>Tasche</li>
+                <li>Contact us</li>
+
+            </ul>
+        </div>
+    </div>
 
 <%= yield %>
 
