--- a/app/assets/stylesheets/allimportant.css.scss
+++ b/app/assets/stylesheets/allimportant.css.scss
@@ -13,25 +13,11 @@ h1, h2, h3 {
 }
 
 
-#main-menu ul {
-	list-style: none;
-	list-style-type: none;
-	font-family: 'Droid Sans', sans-serif;
-	color: #ffffff;
-}
+ul { 
+text-align: center; }
 
-#main-menu ul li:hover {
-	color: #ffffff;
-}
-
-.main.menu {
-	font-family: 'Droid Sans', sans-serif;
-	padding-top: 30px;
-	padding-bottom: 20px;
-	padding-left: 50px;
-	text-align: center;
-	color: #ffffff;
-}
+li { 
+display: inline-block; }
 
 
 .Inc {
