--- a/app/assets/stylesheets/stores.css.scss
+++ b/app/assets/stylesheets/stores.css.scss
@@ -1,31 +1,2 @@
-
-* {
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-.masonry {
-  max-width: 640px;
-}
-
-.masonry .item,
-.masonry .grid-sizer {
-  width:  20%;
-}
-
-.masonry .item,
-.masonry .grid-sizer {
-  height: relative;
-  float: left;
-}
-
-.item.w2 { 
-	background-image: url('../Img/egg.png');
-	width:  40%; }
-.item.h2 { 
-	height: 100px; }
-.item.h3 { 
-	height: 130px; }
-.item.h4 { 
-	height: 180px; }
+.item { width: 25%; }
+.item.w2 { width: 50%; }
