--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -2,16 +2,11 @@
 
 <body>
 
-<div class="masonry js-masonry"  data-masonry-options='{ "columnWidth": ".grid-sizer", "itemSelector": ".item" }'>
-  <div class="item">...</div>
-  <div class="item w2">khevziu</div>
-  <div class="item">kheviz</div>
-</div>
+<div id="container">
+  <div class="item">1</div>
+  <div class="item w2">2</div>
+  <div class="item">3</div>
 
-<div id="column-width-demo2">
-  <div class="grid-sizer"></div>
-  <div class="item"></div>
-  <div class="item"></div>
 </div>
 
   </body>
