--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -11,6 +11,10 @@
     </div>
   <% end %>
 
+   <div class="field">
+    <%= f.label :hersteller %><br>
+    <%= f.text_field :hersteller %>
+  </div>
   <div class="field">
     <%= f.label :name %><br>
     <%= f.text_field :name %>
@@ -23,8 +27,25 @@
     <%= f.label :image_url %><br>
     <%= f.text_field :image_url %>
   </div>
-
+  <div class="field">
+    <%= f.label :preis %><br>
+    <%= f.text_field :preis %>
+  </div>
+  <div class="field">
+    <%= f.label :aktion %><br>
+    <%= f.text_field :aktion %>
+  </div>
+   <div class="field">
+    <%= f.label :groesse %><br>
+    <%= f.text_field :groesse %>
+  </div>
+   <div class="field">
+    <%= f.label :lieferzeiten_versandkosten %><br>
+    <%= f.text_field :lieferzeiten_versandkosten %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
 <% end %>
+
+
