--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -6,8 +6,21 @@
   <div class="item7">
   <a href="http://powerful-harbor-7972.herokuapp.com/products"><img src="http://www.arcor.de/iimages/55/_XVeGYrKxZofAqF6DimGq8meCkdOK.jpg" alt=""></a>
   </div>
-  <div class="item w2">2</div>
-  <div class="item">3</div>
+  <div class="item w2"> 
+  <a href="http://powerful-harbor-7972.herokuapp.com/products"><img src="http://www.arcor.de/iimages/55/_XVeGYrKxZofAqF6DimGq8meCkdOK.jpg" alt=""></a>
+  </div>
+  <div class="item"> <a href="http://powerful-harbor-7972.herokuapp.com/products"><img src="http://www.arcor.de/iimages/55/_XVeGYrKxZofAqF6DimGq8meCkdOK.jpg" alt=""></a>
+  </div>
+    <div class="item"> <a href="http://powerful-harbor-7972.herokuapp.com/products"><img src="http://www.arcor.de/iimages/55/_XVeGYrKxZofAqF6DimGq8meCkdOK.jpg" alt=""></a>
+  </div>
+    <div class="item"> <a href="http://powerful-harbor-7972.herokuapp.com/products"><img src="http://www.arcor.de/iimages/55/_XVeGYrKxZofAqF6DimGq8meCkdOK.jpg" alt=""></a>
+  </div>
+    <div class="item"> <a href="http://powerful-harbor-7972.herokuapp.com/products"><img src="http://www.arcor.de/iimages/55/_XVeGYrKxZofAqF6DimGq8meCkdOK.jpg" alt=""></a>
+  </div>
+    <div class="item"> <a href="http://powerful-harbor-7972.herokuapp.com/products"><img src="http://www.arcor.de/iimages/55/_XVeGYrKxZofAqF6DimGq8meCkdOK.jpg" alt=""></a>
+  </div>
+    <div class="item"> <a href="http://powerful-harbor-7972.herokuapp.com/products"><img src="http://www.arcor.de/iimages/55/_XVeGYrKxZofAqF6DimGq8meCkdOK.jpg" alt=""></a>
+  </div>
 
 </div>
 
