--- a/app/assets/stylesheets/allimportant.css.scss
+++ b/app/assets/stylesheets/allimportant.css.scss
@@ -9,7 +9,10 @@ h1, h2, h3 {
 
 #header {
 	font-family: 'Droid Sans', sans-serif;
-	font-size: 20px;
+	font-size: 40px;
+	line-height: 1em;
+	padding-top: 50px;
+	padding-bottom: 20px;
 }
 
 
