--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,15 +3,15 @@
 <table>
   <thead>
     <tr>
-      <th>Kreiert von</th>
+      <th>Hersteller</th>
       <th>Name</th>
-      <th>Description</th>
+      <th>Beschreibung</th>
       <th>Image url</th>
+      <th>Groesse</th>
+      <th>Versandkosten</th>
+      <th>Lieferzeit</th>
       <th>Preis</th>
       <th>Aktion</th>
-      <th>Groesse</th>
-      <th>Lieferzeit und Verstandkosten</th>
-
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -21,13 +21,13 @@
       <tr>
         <td><%= product.hersteller %></td>
         <td><%= product.name %></td>
-        <td><%= product.description %></td>
+        <td><%= product.beschreibung %></td>
         <td><%= product.image_url %></td>
-         <td><%= product.preis %></td>
-        <td><%= product.aktion %></td>
         <td><%= product.groesse %></td>
-        <td><%= product.lieferzeit_versandkosten %></td>  
-
+        <td><%= product.versandkosten %></td>
+        <td><%= product.lieferzeit %></td>
+        <td><%= product.preis %></td>
+        <td><%= product.aktion %></td>
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
         <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
