--- a/app/assets/stylesheets/stores.css.scss
+++ b/app/assets/stylesheets/stores.css.scss
@@ -1,2 +1,7 @@
-.item { width: 25%; }
+.item { 
+width: 25%; 
+background-image: src="http://www.arcor.de/iimages/55/_XVeGYrKxZofAqF6DimGq8meCkdOK.jpg";
+}
+
 .item.w2 { width: 50%; }
+
