--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -2,27 +2,34 @@
 
 <body>
 
-<div id="container">
-  <div class="item7">
-  <a href="http://powerful-harbor-7972.herokuapp.com/products"><img src="http://www.arcor.de/iimages/55/_XVeGYrKxZofAqF6DimGq8meCkdOK.jpg" alt=""></a>
-  </div>
-  <div class="item w2"> 
-  <a href="http://powerful-harbor-7972.herokuapp.com/products"><img src="http://www.arcor.de/iimages/55/_XVeGYrKxZofAqF6DimGq8meCkdOK.jpg" alt=""></a>
-  </div>
-  <div class="item"> <a href="http://powerful-harbor-7972.herokuapp.com/products"><img src="http://www.arcor.de/iimages/55/_XVeGYrKxZofAqF6DimGq8meCkdOK.jpg" alt=""></a>
-  </div>
-    <div class="item"> <a href="http://powerful-harbor-7972.herokuapp.com/products"><img src="http://www.arcor.de/iimages/55/_XVeGYrKxZofAqF6DimGq8meCkdOK.jpg" alt=""></a>
-  </div>
-    <div class="item"> <a href="http://powerful-harbor-7972.herokuapp.com/products"><img src="http://www.arcor.de/iimages/55/_XVeGYrKxZofAqF6DimGq8meCkdOK.jpg" alt=""></a>
-  </div>
-    <div class="item"> <a href="http://powerful-harbor-7972.herokuapp.com/products"><img src="http://www.arcor.de/iimages/55/_XVeGYrKxZofAqF6DimGq8meCkdOK.jpg" alt=""></a>
-  </div>
-    <div class="item"> <a href="http://powerful-harbor-7972.herokuapp.com/products"><img src="http://www.arcor.de/iimages/55/_XVeGYrKxZofAqF6DimGq8meCkdOK.jpg" alt=""></a>
-  </div>
-    <div class="item"> <a href="http://powerful-harbor-7972.herokuapp.com/products"><img src="http://www.arcor.de/iimages/55/_XVeGYrKxZofAqF6DimGq8meCkdOK.jpg" alt=""></a>
-  </div>
-
+<h1>Masonry - columnWidth</h1>
+<div class="masonry js-masonry"  data-masonry-options='{ "columnWidth": ".grid-sizer", "itemSelector": ".item" }'>
+  <div class="grid-sizer"></div>
+  <div class="item"></div>
+  <div class="item w2 h2"></div>
+  <div class="item h3"></div>
+  <div class="item h2"></div>
+  <div class="item w3"></div>
+  <div class="item"></div>
+  <div class="item"></div>
+  <div class="item h2"></div>
+  <div class="item w2 h3"></div>
+  <div class="item"></div>
+  <div class="item h2"></div>
+  <div class="item"></div>
+  <div class="item w2 h2"></div>
+  <div class="item w2"></div>
+  <div class="item"></div>
+  <div class="item h2"></div>
+  <div class="item"></div>
+  <div class="item"></div>
+  <div class="item h3"></div>
+  <div class="item h2"></div>
+  <div class="item"></div>
+  <div class="item"></div>
+  <div class="item h2"></div>
 </div>
+
 
   </body>
 
