--- a/app/assets/stylesheets/stores.css.scss
+++ b/app/assets/stylesheets/stores.css.scss
@@ -1,7 +1,39 @@
-.item { 
-width: 25%; 
-background-image: src="http://www.arcor.de/iimages/55/_XVeGYrKxZofAqF6DimGq8meCkdOK.jpg";
+
+
+* {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
-.item.w2 { width: 50%; }
+body { font-family: sans-serif; }
 
+.masonry {
+  background: #EEE;
+  max-width: 640px;
+}
+
+.masonry .item,
+.masonry .grid-sizer {
+  width:  20%;
+}
+
+.masonry .item,
+.masonry .grid-sizer {
+  height: 60px;
+  float: left;
+}
+
+.item { 
+width: 25%; 
+}
+
+.item.w2 { 
+width:  40%; }
+
+.item.h2 { 
+height: 100px; }
+.item.h3 { 
+height: 130px; }
+.item.h4 { 
+height: 180px; }
