--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -2,34 +2,22 @@
 
 <body>
 
-<h1>Masonry - columnWidth</h1>
-<div class="masonry js-masonry"  data-masonry-options='{ "columnWidth": ".grid-sizer", "itemSelector": ".item" }'>
-  <div class="grid-sizer"></div>
-  <div class="item"></div>
-  <div class="item w2 h2"></div>
-  <div class="item h3"></div>
-  <div class="item h2"></div>
-  <div class="item w3"></div>
-  <div class="item"></div>
-  <div class="item"></div>
-  <div class="item h2"></div>
-  <div class="item w2 h3"></div>
-  <div class="item"></div>
-  <div class="item h2"></div>
-  <div class="item"></div>
-  <div class="item w2 h2"></div>
-  <div class="item w2"></div>
-  <div class="item"></div>
-  <div class="item h2"></div>
-  <div class="item"></div>
-  <div class="item"></div>
-  <div class="item h3"></div>
-  <div class="item h2"></div>
-  <div class="item"></div>
-  <div class="item"></div>
-  <div class="item h2"></div>
-</div>
 
+<div id="container">
+    <div class="masonryImage">
+        <img src="http://designshack.co.uk/wp-content/uploads/http://lorempixum.com/200/200/food/1" alt="">
+    </div>
+         
+    <div class="masonryImage">
+        <img src="http://designshack.co.uk/wp-content/uploads/http://lorempixum.com/200/150/food/10" alt="">
+    </div>
+         
+    <div class="masonryImage">
+        <img src="http://designshack.co.uk/wp-content/uploads/http://lorempixum.com/200/250/food/3" alt="">
+    </div>
+
+     
+</div>
 
   </body>
 
