--- a/app/assets/stylesheets/allimportant.css.scss
+++ b/app/assets/stylesheets/allimportant.css.scss
@@ -1,20 +1,23 @@
 
-
 @import url(http://fonts.googleapis.com/css?family=Droid+Sans:400,700);
 
-h1, h2, h3 {
+body {
 		font-family: 'Droid Sans', sans-serif;
 }
 
-
 #header {
 	font-family: 'Droid Sans', sans-serif;
-	font-size: 40px;
 	line-height: 1em;
 	padding-top: 50px;
 	padding-bottom: 20px;
+	text-align: center;
+	font-size: 50px;
 }
 
+.span12 {
+	font-family: 'Droid Sans', sans-serif;
+	font-size: 17px;
+}
 
 ul { 
 text-align: center; 
@@ -32,9 +35,17 @@ list-style:none; }
 }
 
 
-.Inc {
-	text-align: center;
-	position: absolute;
-	bottom: 0;
-	color: #000000;
+.footerhold {
+    background: none repeat scroll 0 0 transparent;
+    bottom: 0;
+    position: fixed;
+    text-align: center;
+    width: 100%;
+}
+
+.footer {
+    background: none repeat scroll;
+    height: 30px;
+    margin: auto;
+    width: 400px;
 }
