--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,16 +1,3 @@
-body {
-  background-color: #fff;
-  color: #333;
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
-  line-height: 18px;
-}
-
-p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
-  line-height: 18px;
-}
 
 pre {
   background-color: #eee;
@@ -18,10 +5,15 @@ pre {
   font-size: 11px;
 }
 
+li {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
 a {
   color: #000;
   &:visited {
-    color: #666;
+    color: #fff;
   }
   &:hover {
     color: #fff;
@@ -52,6 +44,7 @@ div {
   padding-bottom: 0;
   margin-bottom: 20px;
   background-color: #f0f0f0;
+
   h2 {
     text-align: left;
     font-weight: bold;
@@ -62,8 +55,11 @@ div {
     background-color: #c00;
     color: #fff;
   }
+
   ul li {
     font-size: 12px;
     list-style: square;
+    padding-top: 5px;
+    padding-bottom: 5px;
   }
 }
