--- a/app/assets/stylesheets/allimportant.css.scss
+++ b/app/assets/stylesheets/allimportant.css.scss
@@ -5,6 +5,11 @@ body {
 		font-family: 'Droid Sans', sans-serif;
 }
 
+.logo {
+	background-image: url('../../Img/logos.png');
+}
+
+
 #header {
 	font-family: 'Droid Sans', sans-serif;
 	line-height: 1em;
