--- a/app/assets/stylesheets/allimportant.css.scss
+++ b/app/assets/stylesheets/allimportant.css.scss
@@ -7,14 +7,17 @@ body {
 
 .logo {
 	background-image: url('../../Img/logos.png');
+	background-position:53%;
+    background-size: 316px 143px;;
+    background-repeat: no-repeat;
+    padding-top: 50px;
+	padding-bottom: 140px;
 }
 
 
 #header {
 	font-family: 'Droid Sans', sans-serif;
 	line-height: 1em;
-	padding-top: 50px;
-	padding-bottom: 20px;
 	text-align: center;
 	font-size: 50px;
 }
@@ -22,21 +25,24 @@ body {
 .span12 {
 	font-family: 'Droid Sans', sans-serif;
 	font-size: 17px;
+	text-align: center;
 }
 
 ul { 
-text-align: center; 
+text-position: 40%; 
 list-style:none;
 }
 
 li { 
-display: 
-inline-block;
-list-style:none; }
+display: inline-block;
+list-style: none;
+padding-left: 10px;
+padding-right: 10px; 
+}
 
 .span12 ul li a:hover {
    background:#000;
-   color:#fff;
+   color:#FFFFFF;
 }
 
 
