--- a/app/assets/stylesheets/allimportant.css.scss
+++ b/app/assets/stylesheets/allimportant.css.scss
@@ -7,10 +7,10 @@ body {
 
 .logo {
 	background-image: url('../../Img/logos.png');
-	background-position:53%;
-    background-size: 316px 143px;;
+	background-position: center;
+    background-size: 400px 143px;;
     background-repeat: no-repeat;
-    padding-top: 50px;
+    padding-top: 40px;
 	padding-bottom: 140px;
 }
 
