--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -2,33 +2,18 @@
 
 <body>
 
-<script>
-  $(function(){
- 
-    var $container = $('#container');
-   
-    $container.imagesLoaded( function(){
-      $container.masonry({
-        itemSelector : '.masonryImage'
-      });
-    });
-   
-  });
-</script>
-
-
 
 <div id="container">
     <div class="masonryImage">
-        <img src="http://designshack.co.uk/wp-content/uploads/http://lorempixum.com/200/200/food/1" alt="">
+        <img src="http://www.easy-gbpics.de/data/media/56/animation_gif_0197_easy-gbpics.de.gif" alt="">
     </div>
          
     <div class="masonryImage">
-        <img src="http://designshack.co.uk/wp-content/uploads/http://lorempixum.com/200/150/food/10" alt="">
+        <img src="http://www.getthegloss.com/media/image/deliciously-ella.jpg" alt="">
     </div>
          
     <div class="masonryImage">
-        <img src="http://designshack.co.uk/wp-content/uploads/http://lorempixum.com/200/250/food/3" alt="">
+        <img src="../../Img/kiwi.png" alt="">
     </div>
 
      
