--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -15,6 +15,39 @@
     <div class="masonryImage">
         <img src="../../Img/kiwi.png" alt="">
     </div>
+    <div class="masonryImage">
+        <img src="http://www.easy-gbpics.de/data/media/56/animation_gif_0197_easy-gbpics.de.gif" alt="">
+    </div>
+         
+    <div class="masonryImage">
+        <img src="http://www.getthegloss.com/media/image/deliciously-ella.jpg" alt="">
+    </div>
+         
+    <div class="masonryImage">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+    <div class="masonryImage">
+        <img src="http://www.easy-gbpics.de/data/media/56/animation_gif_0197_easy-gbpics.de.gif" alt="">
+    </div>
+         
+    <div class="masonryImage">
+        <img src="http://www.getthegloss.com/media/image/deliciously-ella.jpg" alt="">
+    </div>
+         
+    <div class="masonryImage">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+    <div class="masonryImage">
+        <img src="http://www.easy-gbpics.de/data/media/56/animation_gif_0197_easy-gbpics.de.gif" alt="">
+    </div>
+         
+    <div class="masonryImage">
+        <img src="http://www.getthegloss.com/media/image/deliciously-ella.jpg" alt="">
+    </div>
+         
+    <div class="masonryImage">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
 
      
 </div>
