--- a/app/assets/stylesheets/0_stores.css.scss
+++ b/app/assets/stylesheets/0_stores.css.scss
@@ -41,3 +41,6 @@ only screen and (max-device-width : 399px){
         width: 200px;
     }
 }
+
+.masonryImage { width: 25%; }
+.masonryImage.w2 { width: 50%; }
