--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -3,7 +3,8 @@
 <body>
 
 
-<div id="container">
+<div id="container" class="js-masonry"
+  data-masonry-options='{ "columnWidth": 200, "itemSelector": ".item" }'>
     <div class="masonryImage">
         <img src="http://www.easy-gbpics.de/data/media/56/animation_gif_0197_easy-gbpics.de.gif" alt="">
     </div>
