--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -4,7 +4,7 @@
 
 
 <div id="container" class="js-masonry"
-  data-masonry-options='{ "columnWidth": 200, "itemSelector": ".item" }'>
+  data-masonry-options='{ "columnWidth": 200, "itemSelector": ".masonryImage" }'>
     <div class="masonryImage">
         <img src="http://www.easy-gbpics.de/data/media/56/animation_gif_0197_easy-gbpics.de.gif" alt="">
     </div>
