--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -10,7 +10,7 @@
     </div>
          
     <div class="masonryImage">
-        <img src="http://www.getthegloss.com/media/image/deliciously-ella.jpg" alt="">
+        <img src="http://www.easy-gbpics.de/data/media/56/animation_gif_0197_easy-gbpics.de.gif" alt="">
     </div>
          
     <div class="masonryImage">
@@ -21,7 +21,7 @@
     </div>
          
     <div class="masonryImage">
-        <img src="http://www.getthegloss.com/media/image/deliciously-ella.jpg" alt="">
+        <img src="http://www.easy-gbpics.de/data/media/56/animation_gif_0197_easy-gbpics.de.gif" alt="">
     </div>
          
     <div class="masonryImage">
@@ -32,7 +32,7 @@
     </div>
          
     <div class="masonryImage">
-        <img src="http://www.getthegloss.com/media/image/deliciously-ella.jpg" alt="">
+        <img src="http://www.easy-gbpics.de/data/media/56/animation_gif_0197_easy-gbpics.de.gif" alt="">
     </div>
          
     <div class="masonryImage">
@@ -43,7 +43,7 @@
     </div>
          
     <div class="masonryImage">
-        <img src="http://www.getthegloss.com/media/image/deliciously-ella.jpg" alt="">
+        <img src="http://www.easy-gbpics.de/data/media/56/animation_gif_0197_easy-gbpics.de.gif" alt="">
     </div>
          
     <div class="masonryImage">
