--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -17,37 +17,37 @@
         <img src="../../Img/kiwi.png" alt="">
     </div>
     <div class="masonryImage">
-        <img src="http://www.easy-gbpics.de/data/media/56/animation_gif_0197_easy-gbpics.de.gif" alt="">
+        <img src="../../Img/tomate.png" alt="">
     </div>
          
     <div class="masonryImage">
-        <img src="http://www.easy-gbpics.de/data/media/56/animation_gif_0197_easy-gbpics.de.gif" alt="">
+        <img src="../../Img/cloud.png" alt="">
     </div>
          
     <div class="masonryImage">
-        <img src="../../Img/kiwi.png" alt="">
+        <img src="../../Img/spoon.jpg" alt="">
     </div>
     <div class="masonryImage">
-        <img src="http://www.easy-gbpics.de/data/media/56/animation_gif_0197_easy-gbpics.de.gif" alt="">
-    </div>
-         
-    <div class="masonryImage">
-        <img src="http://www.easy-gbpics.de/data/media/56/animation_gif_0197_easy-gbpics.de.gif" alt="">
+        <img src="../../Img/Tönnchen.png" alt="">
     </div>
          
     <div class="masonryImage">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
-    <div class="masonryImage">
-        <img src="http://www.easy-gbpics.de/data/media/56/animation_gif_0197_easy-gbpics.de.gif" alt="">
+        <img src="../../Img/nuss.png" alt="">
     </div>
          
     <div class="masonryImage">
-        <img src="http://www.easy-gbpics.de/data/media/56/animation_gif_0197_easy-gbpics.de.gif" alt="">
+        <img src="../../Img/wall.jpg" alt="">
+    </div>
+    <div class="masonryImage">
+        <img src="../../Img/kartoffel.png" alt="">
     </div>
          
     <div class="masonryImage">
-        <img src="../../Img/kiwi.png" alt="">
+        <img src="../../Img/egg.jpg" alt="">
+    </div>
+         
+    <div class="masonryImage">
+        <img src="../../Img/froh.jpg" alt="">
     </div>
 
      
